# Flight-Price-Prediction

./: Flight_Price_Prediction.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
src/: exception.py  logger.py
